[gd_scene load_steps=10 format=2]

[ext_resource path="res://Tiles/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tiles/lconveyor.png" type="Texture" id=2]
[ext_resource path="res://Tiles/LConveyorTile.gd" type="Script" id=3]
[ext_resource path="res://Tiles/AreaDown.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tiles/AreaRight.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Disabled-R"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Disabled-T"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Enabled-R"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Enabled-T"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[node name="LConveyorTile" instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 0.2

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
vframes = 2
hframes = 9

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Disabled-R"
anims/Disabled-R = SubResource( 1 )
anims/Disabled-T = SubResource( 2 )
anims/Enabled-R = SubResource( 3 )
anims/Enabled-T = SubResource( 4 )

[node name="AreaDown" parent="." index="2" instance=ExtResource( 4 )]

[node name="AreaRight" parent="." index="3" instance=ExtResource( 5 )]

[node name="ValidAreaRight" type="Polygon2D" parent="." index="5"]
visible = false
polygon = PoolVector2Array( -2, -4, 2, -4, 2, -3, 3, -3, 3, -2, 4, -2, 4, 2, -2, 2 )

[node name="ValidAreaTop" type="Polygon2D" parent="." index="6"]
visible = false
polygon = PoolVector2Array( -2, -4, 2, -4, 2, -3, 3, -3, 3, -2, 4, -2, 4, 1, -2, 1 )

[node name="ValidAreaBottom" type="Polygon2D" parent="." index="7"]
visible = false
polygon = PoolVector2Array( -2, -4, 2, -4, 2, -3, 3, -3, 3, -2, 4, -2, 4, 2, -2, 2 )

[node name="ValidAreaLeft" type="Polygon2D" parent="." index="8"]
visible = false
polygon = PoolVector2Array( -2, -4, 3, -4, 3, -2, 4, -2, 4, 2, -2, 2 )

[editable path="AreaDown"]

[editable path="AreaRight"]
